refacto + redesign ui part 3

--- a/pokedex/src/app/pokedex/pokemon-detail/pokemon-detail.component.html
+++ b/pokedex/src/app/pokedex/pokemon-detail/pokemon-detail.component.html
@@ -17,7 +17,7 @@
         <div class="typeIcon">
           <img src="assets/images/typeIcons/{{type.type.name}}.svg"/>
         </div>
-        <p [ngClass]="pokemon.types[0].type.name">{{type.type.name}}</p>
+        <p [ngClass]="type.type.name">{{type.type.name}}</p>
       </div>
     </div>
     <div class="tabBox" [ngClass]="pokemon.types[0].type.name">
