--- a/pokedex/src/app/pokedex/pokemon-detail/pokemon-stat-tab/pokemon-stat-tab.component.html
+++ b/pokedex/src/app/pokedex/pokemon-detail/pokemon-stat-tab/pokemon-stat-tab.component.html
@@ -1,8 +1,8 @@
 <h2 [ngClass]="pokemon.types[0].type.name">Abilities</h2>
 <div class="abilitiesBox" *ngIf="pokemon.abilities">
   <div class="abilityBox" *ngFor="let ability of pokemon.abilities">
-    <p *ngIf="ability.is_hidden" class="hiddenAbility">talent caché</p>
     <p [ngClass]="pokemon.types[0].type.name">{{ability.ability.name}}</p>
+    <p *ngIf="ability.is_hidden" class="hiddenAbility" [ngClass]="pokemon.types[0].type.name">(hidden)</p>
   </div>
 </div>
 <h2 class="color" [ngClass]="pokemon.types[0].type.name">STATS</h2>
@@ -10,8 +10,8 @@
   <div class="stats">
     <div class="stats-container">
       <div class="stats-wrapper">
-        <h3 [ngClass]="pokemon.types[0].type.name">HP</h3>
-        <h3 [ngClass]="pokemon.types[0].type.name">{{pokemon.stats[0].base_stat}}</h3>
+        <p [ngClass]="pokemon.types[0].type.name">HP</p>
+        <p [ngClass]="pokemon.types[0].type.name">{{pokemon.stats[0].base_stat}}</p>
         <div class="progressBar">
           <div class="percent">
             <div class="progress backgroundColor" style="width: {{pokemon.stats[0].base_stat/2}}%;" [ngClass]="pokemon.types[0].type.name"></div>
@@ -19,8 +19,8 @@
         </div>
       </div>
       <div class="stats-wrapper">
-        <h3 [ngClass]="pokemon.types[0].type.name">ATK</h3>
-        <h3 [ngClass]="pokemon.types[0].type.name">{{pokemon.stats[1].base_stat}}</h3>
+        <p [ngClass]="pokemon.types[0].type.name">ATK</p>
+        <p [ngClass]="pokemon.types[0].type.name">{{pokemon.stats[1].base_stat}}</p>
         <div class="progressBar">
           <div class="percent">
             <div class="progress backgroundColor" style="width: {{pokemon.stats[1].base_stat/2}}%;" [ngClass]="pokemon.types[0].type.name"></div>
@@ -28,8 +28,8 @@
         </div>
       </div>
       <div class="stats-wrapper">
-        <h3 [ngClass]="pokemon.types[0].type.name">DEF</h3>
-        <h3 [ngClass]="pokemon.types[0].type.name">{{pokemon.stats[2].base_stat}}</h3>
+        <p [ngClass]="pokemon.types[0].type.name">DEF</p>
+        <p [ngClass]="pokemon.types[0].type.name">{{pokemon.stats[2].base_stat}}</p>
         <div class="progressBar">
           <div class="percent">
             <div class="progress backgroundColor" style="width: {{pokemon.stats[2].base_stat/2}}%;" [ngClass]="pokemon.types[0].type.name"></div>
@@ -37,8 +37,8 @@
         </div>
       </div>
       <div class="stats-wrapper">
-        <h3 [ngClass]="pokemon.types[0].type.name">SATK</h3>
-        <h3 [ngClass]="pokemon.types[0].type.name">{{pokemon.stats[3].base_stat}}</h3>
+        <p [ngClass]="pokemon.types[0].type.name">SATK</p>
+        <p [ngClass]="pokemon.types[0].type.name">{{pokemon.stats[3].base_stat}}</p>
         <div class="progressBar">
           <div class="percent">
             <div class="progress backgroundColor" style="width: {{pokemon.stats[3].base_stat/2}}%;" [ngClass]="pokemon.types[0].type.name"></div>
@@ -46,8 +46,8 @@
         </div>
       </div>
       <div class="stats-wrapper">
-        <h3 [ngClass]="pokemon.types[0].type.name">SDEF</h3>
-        <h3 [ngClass]="pokemon.types[0].type.name">{{pokemon.stats[4].base_stat}}</h3>
+        <p [ngClass]="pokemon.types[0].type.name">SDEF</p>
+        <p [ngClass]="pokemon.types[0].type.name">{{pokemon.stats[4].base_stat}}</p>
         <div class="progressBar">
           <div class="percent">
             <div class="progress backgroundColor" style="width: {{pokemon.stats[4].base_stat/2}}%;" [ngClass]="pokemon.types[0].type.name"></div>
@@ -55,8 +55,8 @@
         </div>
       </div>
       <div class="stats-wrapper">
-        <h3 [ngClass]="pokemon.types[0].type.name">SPD</h3>
-        <h3 [ngClass]="pokemon.types[0].type.name">{{pokemon.stats[5].base_stat}}</h3>
+        <p [ngClass]="pokemon.types[0].type.name">SPD</p>
+        <p [ngClass]="pokemon.types[0].type.name">{{pokemon.stats[5].base_stat}}</p>
         <div class="progressBar">
           <div class="percent">
             <div class="progress backgroundColor" style="width: {{pokemon.stats[5].base_stat/2}}%;" [ngClass]="pokemon.types[0].type.name"></div>
@@ -65,21 +65,4 @@
       </div>
     </div>
   </div>
-  <!--div class="sideInfos">
-    <h1 class="color" [ngClass]="pokemon.types[0].type.name">Type</h1>
-    <p *ngFor="let type of pokemon.types">{{type.type.name}}</p>
-    <h1 class="color" [ngClass]="pokemon.types[0].type.name">Weight</h1>
-    <h1 class="color" [ngClass]="pokemon.types[0].type.name">Height</h1>
-    <h1 class="color" [ngClass]="pokemon.types[0].type.name">Gender</h1>
-    <div class="genderBox">
-      <div class="maleBox">
-        <h2>Male</h2>
-        <p>{{getPokemonMaleRate()}}</p>
-      </div>
-      <div class="femaleBox">
-        <h2>Female</h2>
-        <p>{{getPokemonFemaleRate()}}</p>
-      </div>
-    </div>
-  </div-->
 </div>
