mise a jour ui + moves detail

--- a/pokedex/src/app/pokedex/pokemon-detail/pokemon-detail.component.html
+++ b/pokedex/src/app/pokedex/pokemon-detail/pokemon-detail.component.html
@@ -42,7 +42,7 @@
       </div>
 
       <div class="infoContent" [ngClass]="tabActive[3]">
-        <app-pokemon-move-tab [pokemon]="pokemon"></app-pokemon-move-tab>
+        <app-pokemon-move-tab [pokemon]="pokemon" [pokemonMoves]="pokemonMoves"></app-pokemon-move-tab>
       </div>
 
     </div>
