--- a/pokedex/src/app/pokedex/pokemon-detail/pokemon-detail.component.scss
+++ b/pokedex/src/app/pokedex/pokemon-detail/pokemon-detail.component.scss
@@ -306,6 +306,10 @@ h1.bug{color: $black}h1.dark{color: $white}h1.dragon{color: $white}h1.electric{c
     font-size: 1.1rem;
     font-weight: 600;
   }
+  .content .imgBx img
+  {
+    width: 50%;
+  }
   .typeBox .type h1
   {
     font-size: 1.1em;
