--- a/pokedex/src/app/pokedex/pokemon-detail/pokemon-stat-tab/pokemon-stat-tab.component.scss
+++ b/pokedex/src/app/pokedex/pokemon-detail/pokemon-stat-tab/pokemon-stat-tab.component.scss
@@ -55,6 +55,7 @@ h1
     min-height: 40px;
     padding: 6px 2px;
     background-color: #53535377;
+    border: 2px solid rgba(255, 255, 255, 0.1);
 }
 .abilitiesBox .abilityBox p{
   font-weight: 600;
