--- a/pokedex/src/app/pokedex/pokedex.component.html
+++ b/pokedex/src/app/pokedex/pokedex.component.html
@@ -1,8 +1,7 @@
 <div class="content">
   <div class="search">
     <h1>Pokedex</h1>
-    <p>Search for Pokemon by name.</p>
-    <input (keyup)="onKey($event)" class="bar" (ngSubmit)="onKey($event)">
+    <input placeholder="Type to Search..." (keyup)="onKey($event)" class="bar" (ngSubmit)="onKey($event)">
     <label class="checkboxContainer">
       <input type="checkbox" class="checkbox" [checked]="listDisplay" (change)="listDisplay = !listDisplay">
       <span></span>
