--- a/pokedex/src/app/pokedex/pokemon-detail/pokemon-stat-tab/pokemon-stat-tab.component.scss
+++ b/pokedex/src/app/pokedex/pokemon-detail/pokemon-stat-tab/pokemon-stat-tab.component.scss
@@ -47,7 +47,7 @@ h1
 
 .abilitiesBox .abilityBox{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     border-radius: 50px;
     text-align: center;
     align-items: center;
@@ -65,11 +65,12 @@ h1
 .abilitiesBox .abilityBox:has(.hiddenAbility.bug){border: 2px solid $bug;}.abilitiesBox .abilityBox:has(.hiddenAbility.dark){border: 2px solid $dark;}.abilitiesBox .abilityBox:has(.hiddenAbility.dragon){border: 2px solid $dragon;}.abilitiesBox .abilityBox:has(.hiddenAbility.electric){border: 2px solid $electric;}.abilitiesBox .abilityBox:has(.hiddenAbility.fairy){border: 2px solid $fairy;}.abilitiesBox .abilityBox:has(.hiddenAbility.fighting){border: 2px solid $fighting;}.abilitiesBox .abilityBox:has(.hiddenAbility.fire){border: 2px solid $fire;}.abilitiesBox .abilityBox:has(.hiddenAbility.flying){border: 2px solid $flying;}.abilitiesBox .abilityBox:has(.hiddenAbility.ghost){border: 2px solid $ghost;}.abilitiesBox .abilityBox:has(.hiddenAbility.grass){border: 2px solid $grass;}.abilitiesBox .abilityBox:has(.hiddenAbility.ground){border: 2px solid $ground;}.abilitiesBox .abilityBox:has(.hiddenAbility.ice){border: 2px solid $ice;}.abilitiesBox .abilityBox:has(.hiddenAbility.normal){border: 2px solid $normal;}.abilitiesBox .abilityBox:has(.hiddenAbility.poison){border: 2px solid $poison;}.abilitiesBox .abilityBox:has(.hiddenAbility.psychic){border: 2px solid $psychic;}.abilitiesBox .abilityBox:has(.hiddenAbility.rock){border: 2px solid $rock;}.abilitiesBox .abilityBox:has(.hiddenAbility.steel){border: 2px solid $steel;}.abilitiesBox .abilityBox:has(.hiddenAbility.water){border: 2px solid $water;}
 
 .abilitiesBox .abilityBox .hiddenAbility{
-  color: $darkGray;
-  font-style: italic;
-  opacity: 0.5;
-  text-shadow: 1px 1px black;
+    height: 20px;
+    width: 20px;
+    margin-right: 10px;
 }
+
+.hiddenAbility.bug{filter: invert(100%);}.hiddenAbility.electric{filter: invert(100%);}.hiddenAbility.fairy{filter: invert(100%);}.hiddenAbility.fighting{filter: invert(100%);}.hiddenAbility.fire{filter: invert(100%);}.hiddenAbility.flying{filter: invert(100%);}.hiddenAbility.grass{filter: invert(100%);}.hiddenAbility.ground{filter: invert(100%);}.hiddenAbility.ice{filter: invert(100%);}.hiddenAbility.normal{filter: invert(100%);}.hiddenAbility.psychic{filter: invert(100%);}.hiddenAbility.rock{filter: invert(100%);}.hiddenAbility.water{filter: invert(100%);}
 
 .statsContent{
   display: flex;
