--- a/pokedex/src/app/navbar/navbar.component.scss
+++ b/pokedex/src/app/navbar/navbar.component.scss
@@ -55,6 +55,7 @@ header ul li a
   text-decoration: none;
   display: flex;
   justify-content: space-between;
+  cursor: pointer;
 }
 
 header ul li ul
