first iteration of translation

--- a/pokedex/src/app/pokedex/pokemon-list-item/pokemon-list-item.component.html
+++ b/pokedex/src/app/pokedex/pokemon-list-item/pokemon-list-item.component.html
@@ -3,7 +3,7 @@
     <div class="imgBxLogo"><img src="assets/images/logoPokeball.png"></div>
     <div class="pokemonListDetail">
       <p>#{{getPokemonId()}}</p>
-      <h2>{{pokemon.name}}</h2>
+      <h2>{{getPokemonName()}}</h2>
     </div>
     <div class="imgBx"><img [src]="getFrontDefault()" alt="{{pokemon.name}}"></div>
   </div>
