--- a/pokedex/src/app/pokedex/pokemon-grid-item/pokemon-grid-item.component.html
+++ b/pokedex/src/app/pokedex/pokemon-grid-item/pokemon-grid-item.component.html
@@ -4,7 +4,7 @@
     <h2>{{getPokemonId()}}</h2>
     <div class="imgBx"><img [src]="getFrontDefault()" alt="{{pokemon.name}}"></div>
     <div class="contentBx">
-      <h3>{{pokemon.name}}</h3>
+      <h3>{{getPokemonName()}}</h3>
     </div>
   </div>
 </div>
