ajout du backend des ability (+traductions)

--- a/pokedex/src/app/pokedex/pokemon-detail/pokemon-detail.component.html
+++ b/pokedex/src/app/pokedex/pokemon-detail/pokemon-detail.component.html
@@ -34,7 +34,7 @@
       </div>
 
       <div class="infoContent" [ngClass]="tabActive[1]">
-        <app-pokemon-stat-tab [pokemon]="pokemon" [pokemonSpecies]="pokemonSpecies"></app-pokemon-stat-tab>
+        <app-pokemon-stat-tab [pokemon]="pokemon" [pokemonSpecies]="pokemonSpecies" [pokemonAbilities]="pokemonAbilities"></app-pokemon-stat-tab>
       </div>
 
       <div class="infoContent" [ngClass]="tabActive[2]">
